deploy/k8s/overlays/k3d/patches/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm
spec:
  ingressClassName: traefik
